dark mode corrections

--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,9 @@ h1 {
     @include large-tablet-and-more {
         font-size: 3rem;
     }
+    @include desktop {
+        margin-top: 0;
+    }
 }
 
 .databox {
@@ -113,12 +116,9 @@ h1 {
     & .data {
         @include small-tablet-and-less {
             margin: $data-margin-mobile;
-        }
-        @include mobile {
             width: calc(25% - 2 * $data-margin-mobile);
         }
         @include small-tablet {
-            width: calc(20% - 2 * $data-margin-mobile);
             max-width: $button-width-tablet;
         }
         @include tablet {
@@ -198,7 +198,6 @@ main {
         height: 80vh;
         position: relative;
         min-width: 100%;
-        @include tablet-and-less {}
     }
     & .plate {
         margin: 0;
@@ -206,7 +205,6 @@ main {
         top: 0;
         width: 120vw;
         width: 100%;
-        color: black;
         text-align: center;
         max-width: 100vw;
         font-size: 2rem;
@@ -224,7 +222,6 @@ main {
         }
     }
     & .mass {
-        color: rgb(0, 0, 0);
         font-size: 4em;
         position: absolute;
         height: 10vw;
@@ -239,45 +236,3 @@ main {
         color: #FFFFFF;
     }
 }
-
-// .slideContainer {
-//     -webkit-appearance: none;
-//     width: 100%;
-//     height: 25px;
-//     background: #d3d3d3;
-//     outline: none;
-//     opacity: 0.7;
-//     -webkit-transition: .2s;
-//     transition: opacity .2s;
-// }
-// .slider:hover {
-//     opacity: 1;
-// }
-.chimeLook1 {
-    color: rgb(0, 0, 0);
-}
-
-.chimeLook2 {
-    color: rgb(240, 166, 218);
-}
-
-.chimeLook3 {
-    color: rgb(249, 67, 67);
-}
-
-// #dataBox{
-//     position: sticky;
-//     display: flex;
-//     flex-wrap: wrap;
-//     align-content: space-between;
-//     border: 1em;
-// }
-// .dataContentBox {
-//     display: inline-block;
-//     border-style: double;
-//     border: 1em;
-//     font-size: 2em;
-//     width: 17%;
-//     margin-left: 2%;
-//     height: min-content;
-// }
